	template functions.  Eliminates the need for the strtoul/strtoumax
	wrappers.
	* lib/portage_version.cc: Updated to use destringify<>.
	* lib/util_exceptions.hh: Added bad_cast_E exception used by
	destringify templates.
	* tests/common.sh, tests/dev-test.sh, tests/herd-test.sh,
	tests/metadata-test.sh, tests/stats-test.sh, test/versions-test.sh:
	Added tests to be run during 'make check'.

2005-06-27 Aaron Walker <ka0ttic@gentoo.org>

	* src/metacache.hh: Removed non-existent function.

2005-06-25 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Added check for --enable-api-docs and check for
	doxygen if enabled.  Currently just playing with doxygen.  It's
	pointless at this point to provide API docs for an internal
	convenience lib.
	* doc/Doxyfile.in: Added doxygen configuration.
	* lib/misc.cc: Removed util::map since we don't use it.
	* lib/glob.hh, lib/portage_config.hh, lib/misc.hh,
	lib/portage_find.hh, lib/portage_exceptions.hh, lib/cache.hh,
	lib/file.hh, lib/vars.hh, lib/util_exceptions.hh, lib/timer.hh,
	lib/progress.hh, lib/regex.hh, lib/portage_version.hh,
	lib/portage_misc.hh: Added doxygen-style comments.

2005-06-24 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated to detect a termcap lib (prefers ncurses).
	Define USE_TERMCAP if found.  Updated version (1.1.1_p1).
	* lib/misc.cc: Updated getcols() to use tgetent/tgetnum to get the
	terminal width instead of the nasty stty pipe.
	* doc/examples.txt: Added missing --versions example.

2005-06-20 Aaron Walker <ka0ttic@gentoo.org>

	* src/action_pkg_handler.cc: Updated metadata_matches() to interpret
	packages whose sole maintainer is the herd itself (herd@gentoo.org is
	listed as the maintainer) as a package with no maintainer.

2005-06-19 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.1).

2005-06-18 Aaron Walker <ka0ttic@gentoo.org>

	* src/pkgquery.cc, src/pkgquery.hh, src/querycache.cc,
	src/querycache_xml_handler.cc, src/querycache_xml_handler.hh: Updated