@@ -67,6 +67,7 @@ options_T::option_map_T::set_defaults()
     insopt("querycache.expire", static_cast<long>(84600));
     insopt("wget.options", util::string("-rq -t3 -T15"));
     insopt("devaway.expire", static_cast<long>(84600));
+    insopt("devaway.location", util::string(""));
 
     insopt("maxcol", static_cast<std::size_t>(78));
 
