@@ -1,3 +1,4 @@
 #!/bin/sh
 source common.sh || exit 1
-run_test "dev handler" "../src/herdstat -H ./herds.xml -d ka0ttic" dev dev.expected
+run_test "dev handler" "../src/herdstat -H ./herds.xml -A ./devaway.html -d ka0ttic" \
+    dev dev.expected
