@@ -1,0 +1,153 @@
+<html>
+
+<title>Where in the world are those Gentoo Dev's?</title>
+<body>
+<table width=90% border=1>
+<tr><th><b>Dev</b></th><th><b>Status</b></th></tr>
+
+<tr><td>absinthe</td><td> Almost finished moving (ugh), but currently out of the country on business in Bombay/Mumbai, India.  Email is the best option, but the response time won't be awesome until I get back on July 5th.
+</td></tr>
+
+<tr><td>alexander</td><td> I'm going to be away until after exams. I will be back by late May. You won't need to contact anyone, hopefully. If you have something important, I'll probably be able to respond.
+</td></tr>
+
+<tr><td>angusyoung</td><td> I'm terribly busy at the moment, with not much IRC activity. Please contact me via email if needed.
+</td></tr>
+
+<tr><td>bazik</td><td> Duty in German Army until 2006/05/31, foreign deployment in Afghanistan for International Security Assistance Force from November '05 to March '06.
+</td></tr>
+
+<tr><td>bennyc</td><td> Summer session and intern, back until mid of july
+</td></tr>
+
+<tr><td>cardoe</td><td> Mom's in the hospital. Visiting her until the 24th at least
+</td></tr>
+
+<tr><td>citizen428</td><td> My notebook is still more or less broken, money for repairing it can hopefully be spared in June.
+</td></tr>
+
+<tr><td>cyfred</td><td> permanently gone...
+</td></tr>
+
+<tr><td>eradicator</td><td> Systems are FUBAR.  Limited availibility while I get back up and running.
+</td></tr>
+
+<tr><td>ferringb</td><td> Taking a much needed break.
+</td></tr>
+
+<tr><td>flammie</td><td> During summer (1st of June - 1st of August) mostly unavailable at weekends.
+</td></tr>
+
+<tr><td>genone</td><td> Limited avilability due to connectivity issues
+</td></tr>
+
+<tr><td>george</td><td> Limited availability  until mid June (starting in a new place)
+</td></tr>
+
+<tr><td>hansmi</td><td> June/July (maybe earlier): not too active
+</td></tr>
+
+<tr><td>iggy</td><td> Need a break from the silly shit. bbl. Not like I do much anyways, so just suck it up.
+</td></tr>
+
+<tr><td>jaervosz</td><td> Sporadic activity due to RL issues. For any urgent matters please contact Koon.
+</td></tr>
+
+<tr><td>joem</td><td> Moving to Bloomington, In. Will be without net connection for unknown period of
+</td></tr>
+
+<tr><td>krispykringle</td><td> Finishing classes -> going to Redmond. I'm "around," but forbidden, by way of employment contract, from working on Gentoo very much. 
+</td></tr>
+
+<tr><td>lewk</td><td> Working for Red Hat in Boston for the summer.  I'll be around, but not very active.
+</td></tr>
+
+<tr><td>lv</td><td> &lt;jedi mind trick> I'm not really away. &lt;/jedi mind trick>
+</td></tr>
+
+<tr><td>marduk</td><td> Real live stuff will keep me busy & AFK until after 4 July.
+</td></tr>
+
+<tr><td>nerdboy</td><td> Om medical leave...
+</td></tr>
+
+<tr><td>npmccallum</td><td> In NY, be back ~June 27th.
+</td></tr>
+
+<tr><td>pclouds</td><td> 20050614 - I'm extremely busy working. Probably back in July.
+</td></tr>
+
+<tr><td>pvdabeel</td><td> Business trip to Freescale HQ, back in 2-3 weeks. 
+</td></tr>
+
+<tr><td>pylon</td><td> I'm at LinuxTag Karlsruhe until 06-26.  Don't expect me to be around quite often.
+</td></tr>
+
+<tr><td>pythonhead</td><td> I'll be away until Jun 30th.
+</td></tr>
+
+<tr><td>rac</td><td> Overwhelmed by company work currently
+</td></tr>
+
+<tr><td>seemant</td><td> In Boston, without dev box.  Dev Box arrives in the middle of July, that's when I will return.  I don't check mailing lists or aliases -- I'm on IRC, but better to contact alternate people.
+</td></tr>
+
+<tr><td>sejo</td><td> i'm abroad for work, and don't have much online activity for the coming weeks, eta 13 july if all works out :-)
+</td></tr>
+
+<tr><td>spider</td><td> Moving //  Germany from 12th to 17th ( Wave Gotik Treffen )  // 3-5 weeks before I get an ISP in my new place.
+</td></tr>
+
+<tr><td>squinky86</td><td> Limited computer access until summer.
+</td></tr>
+
+<tr><td>stuart</td><td> Reduced activity until further notice
+</td></tr>
+
+<tr><td>twp</td><td> Around, but generally slow reaction times at the moment: busy at work and the
+</td></tr>
+
+<tr><td>zx</td><td> Busy moving to Austin and settling down. Be settled down by end of March
+</td></tr>
+
+<tr><td>trapni</td><td> I'm moving to my new home. for this time being, I'm not having an inet connection all the time (till 01.08.05). sorry.
+</td></tr>
+
+<tr><td>tove</td><td> out for the weekend -- back 28/06/05.
+</td></tr>
+
+<tr><td>greg_g</td><td> Away for business for a week, from 6/26 to 7/02. Limited internet access.
+</td></tr>
+
+<tr><td>cryos</td><td> Reduced activity 14 August. Off to conference in Japan 24 June, then Tenerife, back a few days and then getting married + honeymoon. Available sporadically when in the UK - herd members should be able to take care of anything.
+</td></tr>
+
+<tr><td>ferdy</td><td> In Ireland from the 29th of June to the 27th of July. The net-mail herd will handle all my net-mail bugs. I don't think I'll have any mail access. Gentoo developer Jose Luis Rivero (aka yoswink) has my phone number in case I have to be contacted urgently.
+</td></tr>
+
+<tr><td>beu</td><td> Last week(ish) at present job, might be unavailable for long periods - email me@g.o on anything that needs attention.
+</td></tr>
+
+<tr><td></td><td></td></tr>
+</table>
+</html>
+</table>
+<p>
+How to use the Devaway system:
+<ul>
+	<li>To set yourself away:</li>
+	<ul>
+		<li><pre>touch ~/.away</pre></li>
+			<li><pre>echo "I'll be away until Aug 14, contact $dev1 or $dev2 in my absense. I will return Aug 30" > ~/.away</pre></li>
+	</ul>
+	<li>When you return:</li>
+	<ul>
+		<li><pre>rm ~/.away</pre></li>
+	</ul>
+</ul>
+</p>
+<br><b>Last Updated: Wed Jun 29 13:00:04 UTC 2005</b>
+<hr>
+</body>
+<h5>Created by Jeffrey Forman - Your friendly Infra Monkey. Have problems? Bug him </h5>
+</html>
